--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -645,43 +645,40 @@
 
  <p>The plan administrator usually&nbsp;fills out&nbsp;the T4A&nbsp;slip when an employer-employee relationship no longer exists. You must include any instalment interest paid for past service contributions. Instalment interest is the portion of contributions that represents the amount charged to buy past service over time.</p>
 
-<p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>
+<p>Learn more about the tax treatment of contributions to a pension plan: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>
   
  </details> 
 </li>
 <li class="code-num">
- <details> <summary>Code 034 – Pension adjustment <span class="label label-warning">Jeremiah</span></summary> 
+ <details> <summary>Code 034 – Pension adjustment <span class="label label-success">Rewrite done</span></summary> 
   <p  id="cd034">Report the amount of a pension adjustment (<abbr title="pension adjustment">PA</abbr>) if you are the plan administrator for a multi-employer plan (<abbr title="multi-employer plan">MEP</abbr>) you made to an employee under a registered pension plan (<abbr title="registered pension plan">RPP</abbr>) during a period of leave or reduced services.</p>
 
 <p>You must also enter the plan registration number using <a href="#cd036">code 36</a>.</p>
 
 <p><strong>Do not</strong> report the amount of a <abbr title="pension adjustment">PA</abbr> for periods of leave or reduced services <strong>not under a MEP</strong> using code 034, use the <a href="/cra-arc/payroll/file/t4slip.html">T4 slip</a>.</p> 
 
- <h4>When to issue</h4>
-<dl class="dl-horizontal">
-<dt>Administrator or trustee of a multi-employer plan (MEP)</dt>
-<dd><div data-ajax-replace="#ajax-ex4"></div></dd>
-</dl>
-<p>Learn more on the tax treatement of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>         
+<p>Learn more about the tax treatment of pension adjustment: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>         
 
  </details> 
  </li>
 <li class="code-num">
- <details>  <summary>Code 036 – Plan registration number <span class="label label-warning">Jeremiah</span></summary> 
+ <details>  <summary>Code 036 – Plan registration number <span class="label label-success">Rewrite done</span></summary> 
 <p id="cd036">Enter the 7-digit registration number that the CRA gave you for your <abbr title="registered pension plan">RPP</abbr> or <abbr title="deferred profit-sharing plan">DPSP</abbr> if you reported an amount for a pension adjustment (<abbr title="pension adjustment">PA</abbr>) using code <a href="#cd034">code 34</a>.</p> 
+
+<p>You have to report the plan number even if your plan requires only employer contributions.</p>
 
 <p>If you made contributions to <strong>more than one</strong> plan for the employee, enter only the number of the plan under which the employee has the largest <abbr title="pension adjustment">PA</abbr>.</p> 
 
  </details>
 </li>
 <li class="code-num"> 
- <details >  <summary>Code 037 – Advanced life deferred annuity purchase <span class="label label-warning">Jeremiah</span></summary> 
-  <p id="cd037">Report the total <abbr title="Advanced life deferred annuity">ALDA</abbr> amounts <strong>transferred from a money purchase </strong> of <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Pool registered pension plan">PRPP</abbr> or <abbr title="Deferred profit sharing plan">DPSP</abbr>.</p> 
+ <details >  <summary>Code 037 – Advanced life deferred annuity purchase <span class="label label-success">Rewrite done</span></summary> 
+  <p id="cd037">Report the total annuity amount amounts <strong>transferred from a money purchase </strong> <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Pool registered pension plan">PRPP</abbr> or <abbr title="Deferred profit sharing plan">DPSP</abbr>.</p> 
 <p>If an amount exceeding the individual’s lifetime limit has been purchased, the excess amount that is transferred back to a qualified registered plan must be reported as a <strong>negative amount</strong> in this box.</p> 
 
  <h4>Specific situation </h4>
 <dl class="dl-horizontal">
-<dt>Annuity payments</dt>
+<dt>Annuity payments from an <abbr title="Advanced life deferred annuity">ALDA</abbr> </dt>
 <dd><p><strong>Do not</strong> report annuity payments from an <abbr title="Advanced life deferred annuity">ALDA</abbr> using code 037, use <a href="#bx024">box 024</a>.</p></dd>
 </dl>
 
