--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -766,9 +766,9 @@
 
 <li class="code-num"> 
  <details >  <summary>Code 109 – Periodic payments from an unregistered plan <span class="label label-warning">Jeremiah</span></summary> 
-<p  id="cd109">Report the periodic payments from pension benefits you paid from a pension fund or plan that is <strong>not</strong> registered using code 109. </p> 
+<p  id="cd109">Report periodic payments from pension benefits you paid from an unregistered pension fund or plan using code 109. </p> 
 <p><strong>Do not</strong> report this amount using box 016.</p>
-<p>Learn more on the tax treatement of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>         
+<p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>         
 
  </details> 
  </li>
@@ -1015,7 +1015,7 @@
 
 <li class="code-num">
 <details>  <summary>Code 190 – Lump-sum payments from an unregistered plan <span class="label label-warning">Jeremiah</span></summary> 
-<p  id="cd190">Report the lump-sum payment from pension benefits you paid from a pension fund or plan that is <strong>not</strong> registed using code 190 <strong>and</strong> <a href="#bx018">box 018</a>. </p> 
+<p  id="cd190">Report lump-sum payments from pension benefits you paid from an unregisted pension fund or plan using code 190 <strong>and</strong> <a href="#bx018">box 018</a>. </p> 
  </details> 
 </li>
 <li class="code-num">
