--- a/subway/uht/calculate.html
+++ b/subway/uht/calculate.html
@@ -823,9 +823,10 @@ margin-left: 38px;
 	    </div>
 	  </div>
 		 
-	  <details><summary>Calculation example</summary>
+	  <details>
+		  <summary>Calculation example</summary>
 	  <p>If the value of the residental property is $500,000 and you have a 50% ownership for the year 2023.</p>
-	
+	  </details>
 		  <ul class="list-unstyled">
 	<li><span class="h5 mrgn-rght-md">&nbsp;</span><span class="mrgn-tp-0 text-muted h5">$500,000 (Value of the property)</span></li>		  
 			  
@@ -836,7 +837,7 @@ margin-left: 38px;
 			  
 <li><span class="h4 mrgn-rght-md">&#x3d;<span class="wb-inv">equals</span></span><span class="mrgn-tp-0 text-muted h5">$2,000 (Underused Housing Tax amount for 2023)</span></li>
 </ul>
-</details>
+
 	
       <h3>Determine the value of the residential property</h3>
       <p>There are two ways to determine the value of a residential property. The general rule is to use its taxable value. If you want to use its fair market value instead, you must file an election with the Agency.</p>
