--- a/subway/uht/whomust.html
+++ b/subway/uht/whomust.html
@@ -794,6 +794,7 @@ margin-left: 38px;
          </section>
          <section class="gc-nav-section experimental provisional">
             <h1 property="name" id="wb-cont">Who must file a return and pay the tax</h1>
+		 <p>[Rescue link to vacant tax?]</p>
          
 		<p>You must file an Underused Housing Tax return for <strong>each</strong> of your properties in Canada if <strong>all of the following</strong> conditions are met on <span class="nowrap">December 31</span>:</p>
 				
