--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -643,8 +643,6 @@
 <dd>Report the amount using code 032 <strong>and</strong> <a href="#cd162">code 162</a></dd>
 </dl>
 
- <p>The plan administrator usually&nbsp;fills out&nbsp;the T4A&nbsp;slip when an employer-employee relationship no longer exists. You must include any instalment interest paid for past service contributions. Instalment interest is the portion of contributions that represents the amount charged to buy past service over time.</p>
-
 <p>Learn more about the tax treatment of contributions to a pension plan: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>
   
  </details> 
@@ -654,13 +652,16 @@
   <p  id="cd034">Report the amount of a pension adjustment (<abbr title="pension adjustment">PA</abbr>) if you are the plan administrator for a multi-employer plan (<abbr title="multi-employer plan">MEP</abbr>) you made to an employee under a registered pension plan (<abbr title="registered pension plan">RPP</abbr>) during a period of leave or reduced services.</p>
 
 <p>You must also enter the plan registration number using <a href="#cd036">code 36</a>.</p>
+ <h4>Specific situations </h4>
+<dl class="dl-horizontal">
 
-<p><strong>Do not</strong> report the amount of a <abbr title="pension adjustment">PA</abbr> for periods of leave or reduced services <strong>not under a MEP</strong> using code 034, use the <a href="/cra-arc/payroll/file/t4slip.html">T4 slip</a>.</p> 
-
+<dt>Periods of leave or reduced services not under a <abbr title="Multi-employer plan">MEP</abbr></dt>
+<dd><strong>Do not</strong> report the amount of a <abbr title="pension adjustment">PA</abbr> for periods of leave or reduced services <strong>not under a <abbr title="Multi-employer plan">MEP</abbr></strong> using code 034, use the <a href="/cra-arc/payroll/file/t4slip.html">T4 slip</a>. </dd>
+</dl>
 <p>Learn more about the tax treatment of pension adjustment: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>         
-
  </details> 
  </li>
+
 <li class="code-num">
  <details>  <summary>Code 036 – Plan registration number <span class="label label-success">Rewrite done</span></summary> 
 <p id="cd036">Enter the 7-digit registration number that the CRA gave you for your <abbr title="registered pension plan">RPP</abbr> or <abbr title="deferred profit-sharing plan">DPSP</abbr> if you reported an amount for a pension adjustment (<abbr title="pension adjustment">PA</abbr>) using code <a href="#cd034">code 34</a>.</p> 
