--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -689,30 +689,22 @@
   </li>
 
 <li class="code-num">
- <details>  <summary>Code 040 – RESP accumulated income payments <span class="label label-warning">Jeremiah</span></summary> 
+ <details>  <summary>Code 040 – RESP accumulated income payments <span class="label label-success">Rewrite done</span></summary> 
   <p id="cd040">Report accumulated income payments you made as the promoter of a registered education savings plan (<abbr title="Registered education savings plan">RESP</abbr>) to a subscriber of the plan.</p> 
    <h4>Specific situation </h4>
 <dl class="dl-horizontal">
 <dt>Payments made to someone else</dt>
-<dd> Report the accumulated income payments you made to someone else because the subscriber, the subscriber's spouse or common-law partner  deceased using code 040 <strong>and</strong> <a href="#cd122">code 122</a>.</dd>
+<dd> Report the accumulated income payments you made to someone else because the subscriber, the subscriber's spouse or common-law partner  was deceased using code 040 <strong>and</strong> <a href="#cd122">code 122</a>.</dd>
 </dl> 
   
-    <h4>When to issue</h4>
-<dl class="dl-horizontal">
-<dt>RESP payments</dt>
-<dd><div data-ajax-replace="#ajax-ex1"></div></dd>
-</dl>
+  
 
  </details> 
  </li>
 <li class="code-num">
 <details >  <summary>Code 042 – RESP educational assistance payments</summary> 
   <p id="cd042">If you are the promoter of an RESP, and you paid <abbr title="registered education savings plan">RESP</abbr> educational assistance payments (amounts other than a refund of contributions) to or for an individual to help further their education at a post-secondary school level, report this amount in the "Other information" area using code <strong>042</strong> on the T4A slip. </p>
-  <h4>When to issue</h4>
-<dl class="dl-horizontal">
-<dt>RESP payments</dt>
-<dd><div data-ajax-replace="#ajax-ex1"></div></dd>
-</dl>
+ 
 
 <p>Learn more <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/registered-education-savings-plans-resps/payments-resp/educational-assistance-payments-eaps.html">Educational Assistance Payments (EAPs)</a></p> 
  </details> 
@@ -813,14 +805,6 @@
 <p id="cd119">Report the premiums that you paid to a group term life insurance plan on behalf of a <strong>former or retired</strong> employee.</p>
 <p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#life">Insurance plans</a></p>
 
- <h4>When to issue</h4>
-<dl class="dl-horizontal">
-<dt>Group term life insurance benefits</dt>
-<dd><div data-ajax-replace="#ajax-ex3"></div></dd>
-<dt>Administrator or trustee of a multi-employer plan (MEP)</dt>
-<dd><div data-ajax-replace="#ajax-ex4"></div></dd>
-</dl>
-
 
  </details> 
  </li>
@@ -828,11 +812,7 @@
 <details>  <summary>Code 122 – RESP accumulated income payments paid to other <span class="label label-warning">Jeremiah</span></summary> 
 <p id="cd122">Report the accumulated income payments you made to someone else because the subscriber, the subscriber's spouse or common-law partner  deceased using code 122 <strong>and</strong> <a href="#cd040">code 040</a>.</p> 
 
-  <h4>When to issue</h4>
-<dl class="dl-horizontal">
-<dt>RESP payments</dt>
-<dd><div data-ajax-replace="#ajax-ex1"></div></dd>
-</dl>
+
  </details> 
 </li>
 <li class="code-num">
@@ -918,11 +898,7 @@
 <li class="code-num">
 <details>  <summary>Code 134 – Tax-free savings account (TFSA) taxable amount <span class="label label-warning">Jeremiah</span></summary> 
   <p  id="cd134">Report the amount of the taxable benefit you paid during the exempt period to a beneficiary who is a resident of Canada.</p>
- <h4>When to issue</h4>
-<dl class="dl-horizontal">
-<dt>Tax-free savings account (TFSA)</dt>
-<dd><div data-ajax-replace="#ajax-ex2"></div></dd>
-</dl>
+
 
 <p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/retirement.html#tfsa">Savings and pension plans</a>.</p> 
  </details> 
