--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -480,7 +480,7 @@
 <dd>Report the pension benefits you paid from a pension fund or plan that is <strong>not</strong> registed using box 018 <strong>and</strong> <a href="#cd190">code 190</a>. </dd>
 
 <dt>Indian (exempt income)</dt>
-<dd><strong>Do not</strong> report tax-exempt lump-sum payments you paid to a recipient who is registered, or entitled to be registered under the Indian Act using box 018. If part of the income was tax-exempt, report the part of the tax-exempt lump-sum payment using <a href="#cd148">code 148</a>.
+<dd><strong>Do not</strong> report tax-exempt lump-sum payments you paid to a recipient who is registered, or entitled to be registered under the Indian Act using box 018, use <a href="#cd148">code 148</a>.
 </dd>
 
 <dt>Direct transfers</dt>
