--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -376,7 +376,7 @@
            </details>
            </li>
 				<li class="box-num">  	
- <details><summary>Box 016 – Pension or superannuation <span class="label label-warning">Jeremiah</span></summary>
+ <details><summary>Box 016 – Pension or superannuation </summary>
         
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
@@ -429,7 +429,7 @@
                     </details>
            </li>
 				<li class="box-num">  	
- <details><summary>Box 018 – Lump-sum payments <span class="label label-warning">Jeremiah</span></summary>
+ <details><summary>Box 018 – Lump-sum payments </summary>
   
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
@@ -716,19 +716,19 @@
  </details> 
 </li>
 <li class="code-num">
- <details >  <summary>Code 102 – Lump-sum payments – non-resident services transferred under paragraph 60(j) <span class="label label-warning">Jeremiah</span></summary> 
-  <p id="cd102">Report lump-sum payments you made for non-resident services transferred under paragraph 60(j) using code 102  <strong>and</strong> <a href="#bx018">box 018</a>.</p>
+ <details >  <summary>Code 102 – Lump-sum payments – non-resident services transferred under paragraph 60(j) <span class="label label-success">Rewrite done</span></summary> 
+  <p id="cd102">Report lump-sum payments you made for non-resident services transferred to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Simplified pension plan">SPP</abbr>, <abbr title="Pooled registered pension plan">PRPP</abbr> or <abbr title="Registered retirement savings plan">RRSP</abbr> and which were eligible to be deducted under paragraph 60(j) using code 102  <strong>and</strong> <a href="#bx018">box 018</a>.</p>
  </details> 
 </li>
 
 <li class="code-num">
- <details >  <summary>Code 104 – Research grants <span class="label label-warning">Jeremiah</span></summary> 
-  <p id="cd104">Report the full amount of the research grant you paid to the recipient.</p> 
+ <details >  <summary>Code 104 – Research grants <span class="label label-success">Rewrite done</span></summary> 
+  <p id="cd104">Report the full amount of the research grants you paid to the recipient.</p> 
 <p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/education.html">Educational assistance - Research grants</a></p> 
 </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 105 – Scholarships, fellowships, bursaries, and artists' project grants  <span class="label label-warning">Jeremiah</span></summary> 
+ <details>  <summary>Code 105 – Scholarships, fellowships, bursaries, and artists' project grants  <span class="label label-success">Rewrite done</span></summary> 
   <p id="cd105">Report the full amount of the scholarships, fellowships, bursaries, and artists' project grants you paid to the recipient.</p> 
 
  <h4>Specific situations </h4>
@@ -752,13 +752,13 @@
   </details> 
   </li>
 <li class="code-num">
- <details >  <summary>Code 108 – Lump-sum payments from a registered pension plan (RPP) that you cannot transfer <span class="label label-warning">Jeremiah</span></summary> 
+ <details >  <summary>Code 108 – Lump-sum payments from a registered pension plan (RPP) that you cannot transfer <span class="label label-success">Rewrite done</span></summary> 
   <p id="cd108">Report single payments you made that you <strong>cannot transfer</strong> from a <abbr title="Registered pension plan">RPP</abbr> using code 108 <strong>and</strong> <a href="#bx018">box 018</a></p>
  </details>
 </li>
 
 <li class="code-num"> 
- <details >  <summary>Code 109 – Periodic payments from an unregistered plan <span class="label label-warning">Jeremiah</span></summary> 
+ <details >  <summary>Code 109 – Periodic payments from an unregistered plan <span class="label label-success">Rewrite done</span></summary> 
 <p  id="cd109">Report periodic payments from pension benefits you paid from an unregistered pension fund or plan using code 109. </p> 
 <p><strong>Do not</strong> report this amount using box 016.</p>
 <p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>         
@@ -766,19 +766,19 @@
  </details> 
  </li>
 <li class="code-num">
- <details >  <summary>Code 110 – Lump-sum payments accrued to <span class="nowrap">December 31, 1971</span> <span class="label label-warning">Jeremiah</span></summary> 
+ <details >  <summary>Code 110 – Lump-sum payments accrued to <span class="nowrap">December 31, 1971</span> <span class="label label-success">Rewrite done</span></summary> 
   <p id="cd110"><p>Report lump-sum payments you made out of <abbr title="registered pension plan">RPP</abbr>s and <abbr title="Deferred profit sharing plan">DPSP</abbr>s accrued to December 31, 1971 using code 110 <strong>and</strong> <a href="#bx018">box 018</a>. </p>
 
  </details> 
  </li>
 <li class="code-num">
- <details >  <summary>Code 111 – Income averaging annuity contracts (IAAC) <span class="label label-warning">Jeremiah</span></summary> 
+ <details >  <summary>Code 111 – Income averaging annuity contracts (IAAC) <span class="label label-success">Rewrite done</span></summary> 
   <p id="cd111">Report annuity payments you made under an <abbr title="income-averaging annuity contract">IAAC</abbr> using code 111 <strong>and</strong> <a href="#bx024">box 024</a>. </dd>
 
  </details> 
 </li>
 <li class="code-num">
- <details >  <summary>Code 115 –&nbsp;Deferred profit sharing plan (DPSP) annuity or instalment payments <span class="label label-warning">Jeremiah</span></summary> 
+ <details >  <summary>Code 115 –&nbsp;Deferred profit sharing plan (DPSP) annuity or instalment payments <span class="label label-success">Rewrite done</span></summary> 
   <p id="cd115">Report instalment or annuity payments you made under a <abbr title="Deferred profit sharing plan">DPSP</abbr> using code 115 <strong>and</strong> <a href="#bx024">box 024</a>. </p>
  </details> 
 </li>
@@ -809,14 +809,14 @@
  </details> 
  </li>
 <li class="code-num">
-<details>  <summary>Code 122 – RESP accumulated income payments paid to other <span class="label label-warning">Jeremiah</span></summary> 
+<details>  <summary>Code 122 – RESP accumulated income payments paid to other <span class="label label-success">Rewrite done</span></summary> 
 <p id="cd122">Report the accumulated income payments you made to someone else because the subscriber, the subscriber's spouse or common-law partner  deceased using code 122 <strong>and</strong> <a href="#cd040">code 040</a>.</p> 
 
 
  </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 123 – Payments from a revoked DPSP <span class="label label-warning">Jeremiah</span></summary> 
+ <details>  <summary>Code 123 – Payments from a revoked DPSP <span class="label label-success">Rewrite done</span></summary> 
   <p id="cd123">Report payments you made from a revoked <abbr title="deferred profit-sharing plan">DPSP</abbr>.</p> 
  </details> 
 </li>
@@ -828,7 +828,7 @@
  </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 125 – Disability benefits paid out of a superannuation or pension plan <span class="label label-warning">Jeremiah</span></summary> 
+ <details>  <summary>Code 125 – Disability benefits paid out of a superannuation or pension plan <span class="label label-success">Rewrite done</span></summary> 
  <p  id="cd125">Report any disability benefits paid out of a superannuation or pension plan.</p> 
  
 <p><strong>Do not</strong> report this amount using box 016.</p> 
@@ -850,15 +850,15 @@
 </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 127 – Veterans' benefits <span class="label label-warning">Jeremiah</span></summary> 
+ <details>  <summary>Code 127 – Veterans' benefits <span class="label label-success">Rewrite done</span></summary> 
  <p  id="cd127">Report the sum of the following amounts using code 127: </p>
-<ul><li>amounts paid in the year for an income replacement benefit payable under Part 2 of the Veterans Well being Act (other than an amount determined under subsection 19.1(1), paragraph 23(1)(b) or subsection 26.1(1) of the Veterans Well being Act, as modified where applicable, under Part 5 of that Act)</li>
-<li>amounts paid in the year that were payable under any of subsections 99(6), 109(1) and 115(5) and sections 124 to 126 of the Veterans Well-being Act</li></ul>
-<p><strong>Do not</strong> report this amount using box 016.</p> 
+<ul><li>Amounts paid in the year for an income replacement benefit payable under Part 2 of the Veterans Well being Act (other than an amount determined under subsection 19.1(1), paragraph 23(1)(b) or subsection 26.1(1) of the Veterans Well being Act, as modified where applicable, under Part 5 of that Act)</li>
+<li>Amounts paid in the year that were payable under any of subsections 99(6), 109(1) and 115(5) and sections 124 to 126 of the Veterans Well-being Act</li></ul>
+<p class="mrgn-tp-md"><strong>Do not</strong> report this amount using box 016.</p> 
  </details> 
  </li>
 <li class="code-num">
- <details>  <summary>Code 128 – Veterans’ benefits eligible for pension splitting <span class="label label-warning">Jeremiah</span></summary> 
+ <details>  <summary>Code 128 – Veterans’ benefits eligible for pension splitting <span class="label label-success">Rewrite done</span></summary> 
   <p  id="cd128">Report the amounts paid in the year for an income replacement benefit payable under Part 2 of the Veterans Well-being Act, if the amount is determined under subsection 19.1(1), paragraph 23(1)(b) or subsection 26.1(1) of that Act (as modified, where applicable, under Part 5 of that Act) using code 128 <strong>and</strong> <a href="#bx016">box 016</a>. </p>
  </details>
 </li>
