--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -896,13 +896,14 @@
  </li>
 
 <li class="code-num">
-<details>  <summary>Code 134 – Tax-free savings account (TFSA) taxable amount <span class="label label-warning">Jeremiah</span></summary> 
+<details>  <summary>Code 134 – Tax-free savings account (TFSA) taxable amount <span class="label label-success">Rewrite done</span></summary> 
   <p  id="cd134">Report the amount of the taxable benefit you paid during the exempt period to a beneficiary who is a resident of Canada.</p>
 
 
 <p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/retirement.html#tfsa">Savings and pension plans</a>.</p> 
  </details> 
 </li>
+
 <li class="code-num">
  <details>  <summary>Code 135 – Recipient-paid premiums for private health services plans <span class="label label-success">Rewrite done</span> </summary> 
  <p  id="cd135">Report the premiums that you paid to a private health services plans on behalf of a <strong>former or retired</strong> employee.</p>
@@ -965,12 +966,12 @@
  </details> 
  </li>
 <li class="code-num">
-<details>  <summary>Code 158 – Lump-sum payments that you cannot transfer that are not reported elsewhere <span class="label label-warning">Jeremiah</span></summary> 
+<details>  <summary>Code 158 – Lump-sum payments that you cannot transfer that are not reported elsewhere <span class="label label-success">Rewrite done</span></summary> 
   <p id="cd158">Report lump-sum payments that you <strong>cannot transfer</strong> that are not reported elsewhere using code 158 <strong>and</strong> <a href="#bx018">box 018</a>.</p>
 </details> 
  </li>
 <li class="code-num">
-<details>  <summary>Code 162 – Pre-1990 Past services contributions while not a contributor <span class="label label-warning">Jeremiah</span></summary> 
+<details>  <summary>Code 162 – Pre-1990 Past services contributions while not a contributor <span class="label label-success">Rewrite done</span></summary> 
 <p id="cd162">Report the amount for past service contributions for 1989 or earlier years while not a contributor using code 162  <strong>and</strong> <a href="#cd032">code 032</a></p> 
 
  </details> 
