--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -416,7 +416,7 @@
 
 
 </dl>
-<p>Learn more on the tax treatement of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>         
+<p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>         
 
                 </details>
  </li>
@@ -457,6 +457,10 @@
 <dt>Lump-sum payments out of <abbr title="Registered pension plan">RPP</abbr> and <abbr title="Deferred profit sharing plan">DPSP</abbr> accrued to December 31, 1971</dt>
 <dd>Report lump-sum payments you made out of a registered pension plan <abbr title="registered pension plan">RPP</abbr> and deferred profit sharing plan <abbr title="Deferred profit sharing plan">DPSP</abbr> accrued to December 31, 1971 using box 018 <strong>and</strong> <a href="#cd110">code 110</a>. </dd>
 
+<dt>Direct transfers</dt>
+<dd><p><strong>Do not</strong> report direct transfers of a <abbr title="Registered pension plan">RPP</abbr> or <abbr title="Deferred profit sharing plan">DPSP</abbr> lump-sum payments to a <abbr title="Registered retirement savings plan">RRSP</abbr>, <abbr title="Simplified pension plan">SPP</abbr>, <abbr title="Pooled registered pension plan">PRPP</abbr>, <abbr title="Registered retirement income fund">RRIF</abbr>, or other <abbr title="Registered pension plan">RPP</abbr>/<abbr title="Deferred profit sharing plan">DPSP</abbr> that are transferred according to subsections&nbsp;147.3(1) to (8) or subsection 147(19) using box 018, use <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2151.html">Form T2151 Direct Transfer of a Single Amount Under Subsection 147(19) or Section 147.3</a>.</p>
+</dd>
+
 <dt>Amounts not eligible for transfer from a <abbr title="Registered pension plan">RPP</abbr> and <abbr title="Deferred profit sharing plan">DPSP</abbr></dt>
 <dd><p>Report amounts you transferred that are greater than the amounts allowed under subsections 147.3(1) to (8) or 147(19) of the Income Tax Act that are considered income in the year they are transferred using box 018. These amounts are considered income in the year they are transferred.</p>
 <p>Report single payments you made that you <strong>cannot transfer</strong> :</p>
@@ -477,18 +481,15 @@
 </dd>
 
 <dt>Unregistered plan</dt>
-<dd>Report the pension benefits you paid from a pension fund or plan that is <strong>not</strong> registed using box 018 <strong>and</strong> <a href="#cd190">code 190</a>. </dd>
+<dd>Report the pension benefits you paid from a pension fund or plan that is <strong>not</strong> registered using box 018 <strong>and</strong> <a href="#cd190">code 190</a>. </dd>
 
 <dt>Indian (exempt income)</dt>
 <dd><strong>Do not</strong> report tax-exempt lump-sum payments you paid to a recipient who is registered, or entitled to be registered under the Indian Act using box 018, use <a href="#cd148">code 148</a>.
 </dd>
 
-<dt>Direct transfers</dt>
-<dd><p><strong>Do not</strong> report direct transfers of a <abbr title="Registered pension plan">RPP</abbr> or <abbr title="Deferred profit sharing plan">DPSP</abbr> lump-sum payments to a <abbr title="Registered retirement savings plan">RRSP</abbr>, <abbr title="Simplified pension plan">SPP</abbr>, <abbr title="Pooled registered pension plan">PRPP</abbr>, <abbr title="Registered retirement income fund">RRIF</abbr>, or other <abbr title="Registered pension plan">RPP</abbr>/<abbr title="Deferred profit sharing plan">DPSP</abbr> that are transferred according to subsections&nbsp;147.3(1) to (8) or subsection 147(19) using box 018, use <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2151.html">Form T2151 Direct Transfer of a Single Amount Under Subsection 147(19) or Section 147.3</a>.</p>
-</dd>
 </dl>
 
-<p>Learn more on the tax treatement of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/lumpsum.html">Lump-sum payments</a></p>     
+<p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/lumpsum.html">Lump-sum payments</a></p>     
 
   </details>
           </li>
@@ -545,7 +546,7 @@
     <p> Do <strong>not </strong>include GST/HST or PST in the amount reported in box 048.</p> 
 
         <p>The CRA is currently <strong>not</strong> applying penalties for failure to report fees for services.</p>
- <p>Learn more on the tax treatement of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/fees-other.html">Payments of fees for services</a></p>
+ <p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/fees-other.html">Payments of fees for services</a></p>
                 </details>
         </li>
 <li class="box-num">  	     <details> <summary>Recipient's name and address </summary>
@@ -837,7 +838,7 @@
 
 <dt>Disability benefits paid as a life annuity</dt>
 <dd><p><strong>Do not</strong> report <strong>disability benefits paid as a life annuity</strong> out of a superannuation or <abbr title="Registered pension plan">RPP</abbr> using code 125, use <a href="#bx016">box 016</a></p>
-<p>Learn more on the tax treatement of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>         
+<p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>         
  </dd>
 </dl>
 </details> 
@@ -876,7 +877,7 @@
 <li class="code-num">
  <details>  <summary>Code 131 – Registered disability savings plan</summary> 
   <p  id="cd131">Report payments paid to an RDSP plan beneficiary.</p> 
-<p>Learn more on the tax treatement of payments other than regular employment: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/registered-disability-savings-plan-rdsp/payments-rules/payments-rdsp-reported.html">RDSP payments</a></p>	 
+<p>Learn more on the tax treatment of payments other than regular employment: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/registered-disability-savings-plan-rdsp/payments-rules/payments-rdsp-reported.html">RDSP payments</a></p>	 
  
 </details> 
  </li>
@@ -890,7 +891,7 @@
   <p id="cd133">Report variable payment life annuity (<abbr title="Variable payment life annuity">VPLA</abbr>) paid out of a money purchase from a <abbr title="registered pension plan">RPP</abbr> and a <abbr title="pool registered pension plan">PRPP</abbr>.</p>
 <p><strong>Do not</strong> report this amount using box 024.</p>
 
-<p>Learn more on the tax treatement of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>         
+<p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>         
 
 </details> 
  </li>
