--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -674,7 +674,7 @@
  </details>
 </li>
 <li class="code-num"> 
- <details >  <summary>Code 037 – Advanced life deferred annuity purchase <span class="label label-success">Rewrite done</span></summary> 
+ <details >  <summary>Code 037 – Advanced life deferred annuity purchase <span class="label label-warning">Jeremiah</span></summary> 
   <p id="cd037">Report the total annuity amount amounts <strong>transferred from a money purchase </strong> <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Pool registered pension plan">PRPP</abbr> or <abbr title="Deferred profit sharing plan">DPSP</abbr>.</p> 
 <p>If an amount exceeding the individual’s lifetime limit has been purchased, the excess amount that is transferred back to a qualified registered plan must be reported as a <strong>negative amount</strong> in this box.</p> 
 
