--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -923,6 +923,9 @@
 <li class="code-num">
  <details>  <summary>Code 144 – Indian (exempt income) – Other income <span class="label label-success">Rewrite done</span></summary> 
   <p  id="cd144">Report the tax-exempt income that is not reported elsewhere on the T4A slip that you paid to a recipient who is registered, or entitled to be registered under the Indian Act.</p> 
+<p>Generally, income is exempt from tax when a person receives&nbsp;them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p> 
+<p><strong>Do not</strong> report this amount using any boxes.</p> 
+
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a></p>
 
  </details> 
@@ -1004,7 +1007,10 @@
 </li>
 <li class="code-num">
  <details>  <summary>Code 195 – Indian (exempt income) – PRPP payments <span class="label label-warning">Jeremiah</span></summary> 
-  <p id="cd195">Report the tax-exempt income you paid from a pooled registered pension plan (<abbr title="Pool registered pension plan">PRPP</abbr>) to a recipient who is registered, or entitled to be registered under the Indian Act.</p> 
+  <p id="cd195">Report the tax-exempt income from a pooled registered pension plan (<abbr title="Pool registered pension plan">PRPP</abbr>) you paid to a recipient who is registered, or entitled to be registered under the Indian Act.</p> 
+<p>Generally, income is exempt from tax when a person receives&nbsp;them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p> 
+<p><strong>Do not</strong> report this amount using box 018.</p> 
+
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a></p>
  </details> 
  </li>
