--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -704,7 +704,7 @@
  </li>
 <li class="code-num">
 <details >  <summary>Code 042 – RESP educational assistance payments</summary> 
-  <p id="cd042">If you are the promoter of an RESP, and you paid <abbr title="registered education savings plan">RESP</abbr> educational assistance payments (amounts other than a refund of contributions) to or for an individual to help further their education at a post-secondary school level, report this amount in the "Other information" area using code <strong>042</strong> on the T4A slip. </p>
+  <p id="cd042">Report educational assistance payments (amounts other than a refund of contributions) you made as the promoter of a registered education savings plan (<abbr title="Registered education savings plan">RESP</abbr>) for an individual to help further their education at a post-secondary school level using code 042. </p>
  
 
 <p>Learn more <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/registered-education-savings-plans-resps/payments-resp/educational-assistance-payments-eaps.html">Educational Assistance Payments (EAPs)</a></p> 
