--- a/business-accounts/change-owner-partners-directors.html
+++ b/business-accounts/change-owner-partners-directors.html
@@ -57,7 +57,7 @@
             <div class="mwstitle section">
 
     <h1 property="name" id="wb-cont" dir="ltr">
-update business and corporate tax information</h1>
+Update business and corporate tax information</h1>
 
 
 
