--- a/subway/uht/calculate.html
+++ b/subway/uht/calculate.html
@@ -822,7 +822,7 @@ margin-left: 38px;
 </ul>
 	    </div>
 	  </div>
-
+	 </div>
 	 
 	
       <h3>Determine the value of the residential property</h3>
