--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -224,6 +224,11 @@
                            <td><a href="rca.html">Payments from retirement compensation arrangements (RCA)</a> </td>
                            <td>Type of remuneration </td>
                         </tr>
+ 			 <tr>
+                           <td><a href="resp.html">Payments from a registered education savings plan (RESP)</a> </td>
+                           <td>Type of remuneration </td>
+                        </tr>
+	   
                         <tr>
                            <td><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/completing-filing-information-returns/t4-information-employers/special-situations/retiring-allowances.html">Payments of retiring allowances</a> </td>
                            <td>Type of remuneration </td>
