--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -697,17 +697,16 @@
 <dt>Payments made to someone else</dt>
 <dd> Report the accumulated income payments you made to someone else because the subscriber, the subscriber's spouse or common-law partner  was deceased using code 040 <strong>and</strong> <a href="#cd122">code 122</a>.</dd>
 </dl> 
-  
-  
+<p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/resp.html"> Payments from a registered education savings plan (RESP)</a></p>
 
  </details> 
  </li>
 <li class="code-num">
-<details >  <summary>Code 042 – RESP educational assistance payments</summary> 
-  <p id="cd042">Report educational assistance payments (amounts other than a refund of contributions) you made as the promoter of a registered education savings plan (<abbr title="Registered education savings plan">RESP</abbr>) for an individual to help further their education at a post-secondary school level using code 042. </p>
+<details >  <summary>Code 042 – RESP educational assistance payments <span class="label label-warning">Jeremiah</span></summary> 
+  <p id="cd042">Report educational assistance payments (amounts other than a refund of contributions) you made as the promoter of a registered education savings plan (<abbr title="Registered education savings plan">RESP</abbr>) to subscriber of the plan to help finance the cost of post-secondary education using code 042.</p>
  
+<p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/resp.html"> Payments from a registered education savings plan (RESP)</a></p>         
 
-<p>Learn more <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/registered-education-savings-plans-resps/payments-resp/educational-assistance-payments-eaps.html">Educational Assistance Payments (EAPs)</a></p> 
  </details> 
 </li>
 <li class="code-num">
@@ -812,7 +811,7 @@
 <li class="code-num">
 <details>  <summary>Code 122 – RESP accumulated income payments paid to other <span class="label label-success">Rewrite done</span></summary> 
 <p id="cd122">Report the accumulated income payments you made to someone else because the subscriber, the subscriber's spouse or common-law partner  deceased using code 122 <strong>and</strong> <a href="#cd040">code 040</a>.</p> 
-
+<p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/resp.html"> Payments from a registered education savings plan (RESP)</a></p>
 
  </details> 
 </li>
