--- a/subway/uht/calculate.html
+++ b/subway/uht/calculate.html
@@ -818,8 +818,9 @@ margin-left: 38px;
 <li><span class="fa-li"><span class="fas fa-times fa-lg"></span><span class="wb-inv">times</span></span><span class="mrgn-tp-0 text-muted h5">Underused Housing Tax rate (1%)</span> </li>
 <li class="brdr-bttm"><span class="fa-li"><span class="fas fa-times fa-lg"></span><span class="wb-inv">times</span></span><span class="mrgn-tp-0 text-muted h5">Ownership amount (%)</span></li>			  
 			  
-<li><span class="fa-li"><span class="fas fa-equals fa-lg"></span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="mrgn-tp-0 text-muted h5">Underused Housing Tax amount ($)</span></span></li>
-</ul>
+<li><span class="fa-li"><span class="fas fa-equals fa-lg"></span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="mrgn-tp-0 text-muted h5">Underused Housing Tax amount ($)</span></span><span class="fa-stack text-success pull-left"><span class="fas fa-circle fa-stack-2x"></span><span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span></span></li>
+
+				  </ul>
 	    </div>
 	  </div>
 	 </div>
