--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -753,7 +753,22 @@
   </li>
 <li class="code-num">
  <details >  <summary>Code 108 – Lump-sum payments from a registered pension plan (RPP) that you cannot transfer <span class="label label-success">Rewrite done</span></summary> 
-  <p id="cd108">Report single payments you made that you <strong>cannot transfer</strong> from a <abbr title="Registered pension plan">RPP</abbr> using code 108 <strong>and</strong> <a href="#bx018">box 018</a></p>
+  <p id="cd108">Report lump-sum payments you made that you <strong>cannot transfer</strong> from a <abbr title="Registered pension plan">RPP</abbr> using code 108 <strong>and</strong> <a href="#bx018">box 018</a></p>
+<h4>Specific situation </h4>
+<dl class="dl-horizontal">
+
+<dt><abbr title="Deferred profit sharing plan">DPSP</abbr> and other payments</dt>
+<dd><strong>Do not</strong> report payments you made that you <strong>cannot transfer</strong> :</p>
+<ul>
+<li>from a <abbr title="Deferred profit sharing plan">DPSP</abbr> using code 108, use <a href="#cd180">code 180</a></li> 
+<li>that is not required to be reported elsewhere using code 180, use <a href="#cd158">code 158</a></li>
+</ul>
+
+</dd>
+
+</dl>
+
+
  </details>
 </li>
 
@@ -970,7 +985,18 @@
  </li>
 <li class="code-num">
 <details>  <summary>Code 158 – Lump-sum payments that you cannot transfer that are not reported elsewhere <span class="label label-success">Rewrite done</span></summary> 
-  <p id="cd158">Report lump-sum payments that you <strong>cannot transfer</strong> that are not reported elsewhere using code 158 <strong>and</strong> <a href="#bx018">box 018</a>.</p>
+  <p id="cd158">Report lump-sum payments you made that you <strong>cannot transfer</strong> that are not reported elsewhere using code 158 <strong>and</strong> <a href="#bx018">box 018</a>.</p>
+
+<h4>Specific situation </h4>
+<dl class="dl-horizontal">
+
+<dt><abbr title="Registered pension plan">RPP</abbr> or <abbr title="Deferred profit sharing plan">DPSP</abbr></dt>
+<dd><strong>Do not</strong> report payments you made that you <strong>cannot transfer</strong> :</p>
+<ul>
+<li>from a <abbr title="Registered pension plan">RPP</abbr> using code 180, use <a href="#cd108">code 108</a></li>
+<li>from a <abbr title="Deferred profit sharing plan">DPSP</abbr> using code 108, use <a href="#cd180">code 180</a></li> 
+</ul>
+
 </details> 
  </li>
 <li class="code-num">
@@ -982,14 +1008,22 @@
 
 <li class="code-num">
  <details>  <summary>Code 180 – Lump-sum payments from a deferred profit-sharing plan (DPSP) that you cannot transfer <span class="label label-warning">Jeremiah</span></summary> 
- <p id="cd180">Report single payments you made that you <strong>cannot transfer</strong> from a <abbr title="Deferred profit sharing plan">DPSP</abbr> using code 180 <strong>and</strong> <a href="#bx018">box 018</a></p>
+ <p id="cd180">Report lump-sum payments you made that you <strong>cannot transfer</strong> from a <abbr title="Deferred profit sharing plan">DPSP</abbr> using code 180 <strong>and</strong> <a href="#bx018">box 018</a></p>
 <p>You also have to report the amount of the payments if you allocated an amount in a <strong>previous year</strong> and you made the payment in the current year.</p>
+
 <h4>Specific situation </h4>
 <dl class="dl-horizontal">
-
 <dt>Current year payments</dt>
 <dd><p><strong>Do not</strong> report the amount of the payments you allocated or reallocated <strong>during the year</strong> under a <abbr title="Deferred profit sharing plan">DPSP</abbr> or a revoked plan using code 180, use <a href="#bx018">box 018</a>. </p>
 </dd>
+<dt><abbr title="Registered pension plan">RPP</abbr> and other payments</dt>
+<dd><strong>Do not</strong> report payments you made that you <strong>cannot transfer</strong> :</p>
+<ul>
+<li>from a <abbr title="Registered pension plan">RPP</abbr> using code 180, use <a href="#cd108">code 108</a></li>
+<li>that is not required to be reported elsewhere using code 180, use <a href="#cd158">code 158</a></li>
+</ul>
+</dd>
+
 </dl>
 </details> 
 </li>
