--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -753,7 +753,7 @@
   </li>
 <li class="code-num">
  <details >  <summary>Code 108 – Lump-sum payments from a registered pension plan (RPP) that you cannot transfer <span class="label label-success">Rewrite done</span></summary> 
-  <p id="cd108">Report lump-sum payments you made that you <strong>cannot transfer</strong> from a <abbr title="Registered pension plan">RPP</abbr> using code 108 <strong>and</strong> <a href="#bx018">box 018</a></p>
+  <p id="cd108">Report lump-sum payments you made that you <strong>cannot transfer</strong> from a <abbr title="Registered pension plan">RPP</abbr> using code 108 <strong>and</strong> <a href="#bx018">box 018</a>.</p>
 <h4>Specific situation </h4>
 <dl class="dl-horizontal">
 
@@ -1008,7 +1008,7 @@
 
 <li class="code-num">
  <details>  <summary>Code 180 – Lump-sum payments from a deferred profit-sharing plan (DPSP) that you cannot transfer <span class="label label-warning">Jeremiah</span></summary> 
- <p id="cd180">Report lump-sum payments you made that you <strong>cannot transfer</strong> from a <abbr title="Deferred profit sharing plan">DPSP</abbr> using code 180 <strong>and</strong> <a href="#bx018">box 018</a></p>
+ <p id="cd180">Report lump-sum payments you made that you <strong>cannot transfer</strong> from a <abbr title="Deferred profit sharing plan">DPSP</abbr> using code 180 <strong>and</strong> <a href="#bx018">box 018</a>.</p>
 <p>You also have to report the amount of the payments if you allocated an amount in a <strong>previous year</strong> and you made the payment in the current year.</p>
 
 <h4>Specific situation </h4>
