--- a/subway/mghrtc/expensesmaire.html
+++ b/subway/mghrtc/expensesmaire.html
@@ -161,7 +161,7 @@ For this rule to apply the outlay or expense must be a qualifying expenditure of
 </ul>
 
   <h2 id="h-3">Maximum amount of expenses you can claim</h2>
-<p>An eligible individual can claim up to $50,000 in qualifying costs for one qualifying renovation that was completed in the tax year. When renovation costs have been shared, more than one eligible individual can each make a claim for the same renovation up to a combined total of $50,000.</p>
+<p>An eligible individual can <strong>claim up to $50,000</strong> in qualifying costs for one qualifying renovation that was completed in the tax year. When renovation costs have been shared, more than one eligible individual can each make a claim for the same renovation up to a combined total of $50,000.</p>
 		 <p>The MHRTC is 15% of <strong>whichever amount is less</strong>:</p>
  <ul class="list-unstyled cnjnctn-type-or">
   <li class="cnjnctn-col">
