--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -650,7 +650,7 @@
 </li>
 <li class="code-num">
  <details> <summary>Code 034 – Pension adjustment <span class="label label-success">Rewrite done</span></summary> 
-  <p  id="cd034">Report the amount of a pension adjustment (<abbr title="pension adjustment">PA</abbr>) if you are the plan administrator for a multi-employer plan (<abbr title="multi-employer plan">MEP</abbr>) you made to an employee under a registered pension plan (<abbr title="registered pension plan">RPP</abbr>) during a period of leave or reduced services.</p>
+  <p  id="cd034">Report the amount of a pension adjustment (<abbr title="pension adjustment">PA</abbr>) if you are the plan administrator for a multi-employer plan (<abbr title="multi-employer plan">MEP</abbr>) you made to an employee under a registered pension plan (<abbr title="registered pension plan">RPP</abbr>) during a period of leave or reduced services using code 034.</p>
 
 <p>You must also enter the plan registration number using <a href="#cd036">code 36</a>.</p>
  <h4>Specific situations </h4>
@@ -665,7 +665,7 @@
 
 <li class="code-num">
  <details>  <summary>Code 036 – Plan registration number <span class="label label-success">Rewrite done</span></summary> 
-<p id="cd036">Enter the 7-digit registration number that the CRA gave you for your <abbr title="registered pension plan">RPP</abbr> or <abbr title="deferred profit-sharing plan">DPSP</abbr> if you reported an amount for a pension adjustment (<abbr title="pension adjustment">PA</abbr>) using code <a href="#cd034">code 34</a>.</p> 
+<p id="cd036">Enter the 7-digit registration number that the CRA gave you for your <abbr title="registered pension plan">RPP</abbr> or <abbr title="deferred profit-sharing plan">DPSP</abbr> using code 036 if you reported an amount for a pension adjustment (<abbr title="pension adjustment">PA</abbr>) using code <a href="#cd034">code 34</a>.</p> 
 
 <p>You have to report the plan number even if your plan requires only employer contributions.</p>
 
@@ -675,7 +675,7 @@
 </li>
 <li class="code-num"> 
  <details >  <summary>Code 037 – Advanced life deferred annuity purchase <span class="label label-warning">Jeremiah</span></summary> 
-  <p id="cd037">Report the total annuity amount amounts <strong>transferred from a money purchase </strong> <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Pool registered pension plan">PRPP</abbr> or <abbr title="Deferred profit sharing plan">DPSP</abbr>.</p> 
+  <p id="cd037">Report the total annuity amount amounts <strong>transferred from a money purchase </strong> <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Pool registered pension plan">PRPP</abbr> or <abbr title="Deferred profit sharing plan">DPSP</abbr> using code 037.</p> 
 <p>If an amount exceeding the individual’s lifetime limit has been purchased, the excess amount that is transferred back to a qualified registered plan must be reported as a <strong>negative amount</strong> in this box.</p> 
 
  <h4>Specific situation </h4>
@@ -691,7 +691,7 @@
 
 <li class="code-num">
  <details>  <summary>Code 040 – RESP accumulated income payments <span class="label label-success">Rewrite done</span></summary> 
-  <p id="cd040">Report accumulated income payments you made as the promoter of a registered education savings plan (<abbr title="Registered education savings plan">RESP</abbr>) to a subscriber of the plan.</p> 
+  <p id="cd040">Report accumulated income payments you made as the promoter of a registered education savings plan (<abbr title="Registered education savings plan">RESP</abbr>) to a subscriber of the plan using code 040.</p> 
    <h4>Specific situation </h4>
 <dl class="dl-horizontal">
 <dt>Payments made to someone else</dt>
@@ -703,7 +703,7 @@
  </li>
 <li class="code-num">
 <details >  <summary>Code 042 – RESP educational assistance payments <span class="label label-warning">Jeremiah</span></summary> 
-  <p id="cd042">Report educational assistance payments (amounts other than a refund of contributions) you made as the promoter of a registered education savings plan (<abbr title="Registered education savings plan">RESP</abbr>) to subscriber of the plan to help finance the cost of post-secondary education using code 042.</p>
+  <p id="cd042">Report educational assistance payments (amounts other than a refund of contributions) you made as the promoter of a registered education savings plan (<abbr title="Registered education savings plan">RESP</abbr>) to a subscriber of the plan to help finance the cost of post-secondary education using code 042.</p>
  
 <p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/resp.html"> Payments from a registered education savings plan (RESP)</a></p>         
 
@@ -729,7 +729,7 @@
 </li>
 <li class="code-num">
  <details>  <summary>Code 105 – Scholarships, fellowships, bursaries, and artists' project grants  <span class="label label-success">Rewrite done</span></summary> 
-  <p id="cd105">Report the full amount of the scholarships, fellowships, bursaries, and artists' project grants you paid to the recipient.</p> 
+  <p id="cd105">Report the full amount of the scholarships, fellowships, bursaries, and artists' project grants you paid to the recipient using code 105.</p> 
 
  <h4>Specific situations </h4>
 <dl class="dl-horizontal">
