--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -825,7 +825,7 @@
  </li>
 <li class="code-num">
 <details>  <summary>Code 122 – RESP accumulated income payments paid to other <span class="label label-success">Rewrite done</span></summary> 
-<p id="cd122">Report the accumulated income payments you made to someone else because the subscriber, the subscriber's spouse or common-law partner  deceased using code 122 <strong>and</strong> <a href="#cd040">code 040</a>.</p> 
+<p id="cd122">Report accumulated income payments you made to someone else because the subscriber, the subscriber's spouse or common-law partner  deceased using code 122 <strong>and</strong> <a href="#cd040">code 040</a>.</p> 
 <p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/resp.html"> Payments from a registered education savings plan (RESP)</a></p>
 
  </details> 
