--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -621,6 +621,15 @@
 <p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/child-expenses.html">Child care expenses</a></p></dd>
 </dl>
 
+<dt>Travel benefit, including medical travel assistance</dt>
+<dd><p>Report the total amount if you paid for:</p>
+<ul>
+ <li> Travel benefit using code 028</li>
+ <li> Medical travel assistance in a prescribed zone, using code 028 <strong>and</strong> <a href="#cd116">code 116</a> for the medical portion only</li>
+</ul>
+<p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p></dd>
+</dl>
+
 </details> 
 </li>
 <li class="code-num">
@@ -802,11 +811,17 @@
    <p id="cd116">If an employee usually lives in a prescribed zone and works at a special work site in a prescribed zone, a third party providing the benefit must report any non-business travel assistance (including medical travel assistance) in Other information using code 028. </p>
    <p>Separate the medical travel from the other non-business travel. Report the medical travel amount in Other information using code 116.</p>
 <p>Employees who are eligible to claim the northern residents deduction for travel benefits will use the information included in boxes 32 and 33 of their T4 slip to correctly calculate their deduction on form T2222, Northern Residents Deductions for 2021.</p>
+
+<p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p>
+
  </details> 
  </li>
 <li class="code-num">
-<details >  <summary>Code 117 – Loan benefits</summary> 
-  <p id="cd117">Report the benefits of a loan that a person or partnership received as a shareholder or related to a shareholder using code 117.</p> 
+<details >  <summary>Code 117 – Loan benefits <span class="label label-warning">Jeremiah</span></summary> 
+  <p id="cd117">Report the taxable loan benefit you provided to a person or partnership that was a shareholder using code 117.</p>
+
+<p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/loans.html">Loans and employee debt</a></p>
+ 
  </details> 
 </li>
 <li class="code-num">
@@ -839,6 +854,8 @@
   <p  id="cd124">A third party (such as a prime contractor or another subcontractor) can provide board and lodging or transportation to employees of subcontractors. For example, all workers on a site can share common quarters.</p> 
  <p>Report this amount in Other information using code 124.</p>
 <p>If an employee does not usually live in a prescribed zone but works at a special work site in a prescribed zone and meets the residency requirements for the northern residents' deductions, do not include in box 028 the exempt portion for board and lodging benefits the employee receives while working at the special work site which is within 30 kilometres from the nearest urban area having a population of at least 40,000 persons. </p>
+<p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p>
+
  </details> 
 </li>
 <li class="code-num">
